--- a/updataimage.html
+++ b/updataimage.html
@@ -10,7 +10,7 @@
 
 <script>
     var img = document.getElementById("image");
-    var url = "http://www.016imcn.love:4567/getLatestImage-test"; // 这里替换成你自己的接口地址
+    var url = "http://127.0.0.1:4567/getLatestImage-test"; // 这里替换成你自己的接口地址
 
     function refreshImage() {
         var xhr = new XMLHttpRequest();
